--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@ div.jumbotron{
 .jumbotron h1{
   font-size: 60px;
 }
+
+.jumbotron p{
+  font-size: 20px;
+  padding-top: 0;
+  padding-right: 40px;
+  padding-bottom: 0;
+  padding-left: 40px;
+}
