--- a/style.css
+++ b/style.css
@@ -100,5 +100,5 @@ div.questions a.btn{
   background-color: #007bff;
   border-color: #007bff;
   text-decoration: none;
-  padding: none;
+  padding: 18px;
 }
